# cpp-playground

./: CMakeLists.txt  README.md
cmake/: Dependencies.cmake
include/: EnumHelpers.h
tests/: CMakeLists.txt  EnumHelper_test.cpp  TestEnums.h
